--- a/arch/arm/configs/k61v1_32_bsp_1g_debug_defconfig
+++ b/arch/arm/configs/k61v1_32_bsp_1g_debug_defconfig
@@ -433,6 +433,7 @@ CONFIG_PRINTK_TIME=y
 CONFIG_DYNAMIC_DEBUG=y
 CONFIG_DEBUG_INFO=y
 CONFIG_FRAME_WARN=1500
+CONFIG_PAGE_OWNER=y
 CONFIG_PANIC_ON_OOPS=y
 CONFIG_PANIC_TIMEOUT=1
 CONFIG_SCHEDSTATS=y
