--- a/drivers/misc/mediatek/cmdq/v3/Makefile
+++ b/drivers/misc/mediatek/cmdq/v3/Makefile
@@ -19,6 +19,8 @@ else
 MTK_PLATFORM := $(CONFIG_MTK_PLATFORM)
 endif
 
+ccflags-$(CONFIG_MACH_MT6779) += -DCMDQ_MDP_ENABLE_SPR
+
 ccflags-y += -I$(srctree)/drivers/misc/mediatek/smi/ \
              -I$(srctree)/drivers/misc/mediatek/mmp/ \
              -I$(srctree)/drivers/misc/mediatek/mach/$(MTK_PLATFORM)/include
